lint: fixup the openapi spec warnings + generate a new SDK for the updated file endpoint
